objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountLookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AccountLookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Encrypted_Field_Test__c</fullName>
        <label>Encrypted Field Test</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PicklistToMultipicklist__c</fullName>
        <label>PicklistToMultipicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test 1</fullName>
                </value>
                <value>
                    <fullName>Test 2</fullName>
                </value>
                <value>
                    <fullName>Test 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_BP_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test BP Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Field_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Field 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Field</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>